# guslee

./: .env-example  .env_example  .envrc  .gitignore  Cargo.toml  Cargo.toml~  Dockerfile  README.md  bacon.toml  build.rs  dev.sh  flake.nix  fly.toml  get_spotify_refresh_token.sh  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  ç
.github/workflows/: docker-test.yml  fly-deploy.yml
crates/chess-module/: Cargo.toml
crates/chess-module/src/: lib.rs  types.rs
crates/games-module/: Cargo.toml
crates/games-module/src/: lib.rs
crates/music-module/: Cargo.toml
crates/music-module/src/: lib.rs
crates/search-engine/: Cargo.toml
crates/search-engine/src/: lib.rs  types.rs  utils.rs
garden/: garden_styling.md  hello.md  welcome.md
garden/gaming/chess/: summary.md
garden/gaming/expedition33/: ex33_first_impression.md  first_impression.md
garden/gaming/hollow_knight_silksong/: first_day_playing_silksong.md  second_day_playing_silksong.md
garden/gaming/katamari/: back_to_it_again.md
garden/gaming/lossless_scaling/: introduction.md
garden/gaming/peak/: mesa_update.md  never_cannon_in_volcano.md
garden/gaming/silent_hill_2/: first_impression.md  sh2_first_impression.md
garden/gaming/silent_hill_3/: back_to_it_again.md
garden/gaming/silent_hill_f/: first_impression.md  silent_hill_f_first_impression.md
garden/gaming/tomb_raider/: cheap_no_brainer_steam_deal.md
garden/journal/1998/: first_hello_world.md
garden/journal/2000/: luca.md
garden/journal/2010/: spain.md
garden/journal/2016/: university_upv.md
garden/journal/2020/: verazial.md
garden/journal/2021/: tfg.md
garden/journal/2022/: masters_degree.md  tfm.md
garden/journal/2024/: bea_moreno.md  bye_bye_sopra_steria.md  drogheda.md  eli_school.md  framework_laptop.md  waternology.md
garden/journal/2025/: first_job_in_ireland.md  kilbarrack.md  my_guitars.md  rathmines.md  starting_gym.md  steam_deck_purchase.md
garden/steam_deck/hollow_knight_silksong/: first_day_playing_silksong.md  second_day_playing_silksong.md
garden/steam_deck/lossless_scaling/: introduction.md
pages/: _app.tsx  index.tsx
pages/api/: _middleware.ts
src/: app.css  app.html  main.rs  main.rs~
src/components/card/: index.tsx
src/components/landingPage/: index.tsx
src/controllers/: chess_controller.rs  fallback_controller.rs  graph_controller.rs  metadata_controller.rs  mod.rs  music_controller.rs  news_controller.rs  posts_controller.rs  routines_controller.rs  steam_controller.rs
src/helpers/: mod.rs
src/http_service/: mod.rs  mod.rs~
src/i18n/: English.yaml  Portuguese.yaml  Spanish.yaml  english.yaml  mod.rs  portuguese.yaml  spanish.yaml  translator.rs
src/lib/components/: AboutMe.svelte  ContactMe.svelte  Projects.svelte  SplashScreen.svelte
src/lib/components/cards/: InformationCard.svelte
src/md_service/: mod.rs
src/routes/: +layout.svelte  +page.svelte  chess_routes.rs  compliments.rs  graph_routes.rs  metadata_routes.rs  mod.rs  mod.rs~  news_routes.rs  posts_routes.rs
static/: animations.css  app-events.js  articles.js  compiled.css  elo-chart.js  graph.js  mobile-search.js  prose-style-watcher.js  scroll.js  style-oberserver.js  style.css  vis-network.min.css  vis-network.min.js
static/images/: linkedin.svg:Zone.Identifier
static/videos/: background_video3.mp4:Zone.Identifier  background_video4.mp4:Zone.Identifier  background_video5.mp4:Zone.Identifier
styles/: globals.css
templates/: article.html  articles_list.html  articles_page.html  base.html  chess_page.html  chess_stats.md  chess_stats_fallback.md  compliment.html  index.html  landing_page.html  news.html
types/: index.ts
