[package]
name = "guslee"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
askama = { version = "0.12.1" }
askama_actix = "0.14.0"
env_logger = "0.11.5"
strum = "0.26.3"
strum_macros = "0.26.4"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
time = { version = "0.3.4", features = ["serde"] }

