[workspace]
members = [
    "crates/search-engine",
    "crates/chess-module",
]

[package]
name = "guslee"
version = "0.1.0"
edition = "2024"

[dependencies]
search-engine = {path = "crates/search-engine"}
chess-module = {path = "crates/chess-module"}
actix-files = "0.6.7"
actix-web = "4.11.0"
markdown = "1.0.0"
simple_logger = "5.0"
log = "0.4"
maud = { version = "0.27.0", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.3.10", features = ["kv-mem", "protocol-ws"], default-features = false }
cached = {version = "0.56.0", features = ["async"]}
chrono = {version = "0.4.42"}

[profile.dev]
opt-level = 0
incremental = true
debug = 1

[profile.dev.package."*"]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
