[package]
name = "chess-module"
version = "0.1.0"
edition = "2024"

[dependencies]
minreq = { version = "2.14.1", features=["json-using-serde", "https"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.3.10", features = ["kv-mem", "protocol-ws"], default-features = false }
chrono = {version = "0.4.42"}
