[package]
name = "chess-module"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "webpki-roots", "http2", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.3.10", features = ["kv-mem", "protocol-ws"], default-features = false }
chrono = {version = "0.4.42"}
tokio = { version = "1.49.0", features = ["macros"] }
